Contact info added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <br>
     <h2> Contact Information</h2>
     <br>
-    <h3>Email:</h3>
+    <ul>
+        <li><strong>Email: </strong> <a href>williamcthorne@gmail.com></li></a>
+        <li><strong>GitHub: </strong><a href=https://github.com/IdFightGandhi target="_blank">IdFightGandhi</a></li>
+        <li><strong>Portfolio: </strong><a href="#" >Coming Soon!</a></li>
+    </ul>
 
     
 </body>
